[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/squares/Glow_3/20x20_green.png" type="Texture" id=2]
[ext_resource path="res://assets/squares/8x8_gray.png" type="Texture" id=3]
[ext_resource path="res://assets/squares/8x8_white.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.01901, 4.01121 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[node name="Enemy" type="Area2D"]
z_index = -1
z_as_relative = false
input_pickable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
priority = 3.0
monitorable = false
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HDSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.752941 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0.0862745, 0.858824, 0, 0.705882 )
material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="glow" type="Sprite" parent="Sprite"]
modulate = Color( 0.988235, 0.988235, 0.988235, 1 )
show_behind_parent = true
material = SubResource( 3 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="walktime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="waittime" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true

[node name="lifeTime" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="timeout" from="walktime" to="." method="_on_walktime_timeout"]
[connection signal="timeout" from="waittime" to="." method="_on_waittime_timeout"]
[connection signal="timeout" from="lifeTime" to="." method="_on_lifeTime_timeout"]
